# SceneSeek

./: .gitignore  README.md  docker-compose.yml
frontend/: Dockerfile  index.html  nginx.conf  script.js  style.css
frontend/src/: index.html
frontend/src/api/: script.js
frontend/src/styles/: style.css
gateway/: main.py  message_broker.py  pyproject.toml
gateway/src/: main.py
gateway/src/api/v1/: router.py
gateway/src/api/v1/routes/: identify.py  root.py  searches.py  videos.py
gateway/src/api/v1/schemas/: common.py  identification.py  search.py  video.py
gateway/src/core/: broker.py  config.py  database.py  minio.py
gateway/src/models/: search_history.py  search_results.py  types.py  users.py  video_events.py  videos.py
gateway/src/services/: broker_service.py  database_service.py  identification_service.py  indexing_service.py  minio_service.py  video_service.py
ml_worker/: Dockerfile  README.md  broker.py  config.py  cuda_docker.txt  engine.py  main.py  pyproject.toml  simple_ml.py
