[project]
name = "ml-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "einops>=0.8.1",
    "faststream[cli,rabbit]>=0.6.5",
    "numpy<2.4.0",
    "opencv-python>=4.11.0.86",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "transformers==4.46.0",
    "ultralytics>=8.4.7",
]
